modified:   tpl/macros_repec.html

--- a/tpl/macros_repec.html
+++ b/tpl/macros_repec.html
@@ -102,7 +102,7 @@
 </DEFFUNC>
 <DEFMACRO NAME="REFERENCE_TITLE">
     <titles>
-        <title>[#TITLE|removenotes|textebrut|cleanBadChars|replacequotationmark|trim]</title>
+        Title: [#TITLE|removenotes|textebrut|cleanBadChars|replacequotationmark|trim]
         <IF COND="[#SUBTITLE]"/><subtitle>[#SUBTITLE|removenotes|textebrut|cleanBadChars|replacequotationmark|trim]</subtitle></IF>
     </titles>
 </DEFMACRO>
