modified:   tpl/repec.html

--- a/tpl/repec.html
+++ b/tpl/repec.html
@@ -1,4 +1,4 @@
-<USE MACROFILE="macros_doi.html" />
+<USE MACROFILE="macros_repec.html" />
 <LET VAR="guess_alter_subtitle" GLOBAL="1"></LET>
 <?php
     header("Content-type: text/plain");
